<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SettingActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_color">

            <RelativeLayout
                android:id="@+id/topbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="25dp">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/back"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/montserratregular"
                    android:text="@string/Setting"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topbar"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="22dp"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserratregular"
                        android:text="@string/notification"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchComments"
                        style="@style/customSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:tint="@color/app_color" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height=".3dp"
                    android:layout_marginHorizontal="22dp"
                    android:layout_marginVertical="5dp"
                    android:background="@color/hint_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/shape_search"
                    android:orientation="horizontal"
                    android:paddingVertical="15dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserratregular"
                        android:paddingStart="10dp"
                        android:text="@string/terms_of_service"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="20dp"
                        android:alpha="0.4"
                        android:rotation="180"
                        android:src="@drawable/ic_back"
                        app:tint="@color/hint_text" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_search"
                    android:orientation="horizontal"
                    android:paddingVertical="15dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserratregular"
                        android:paddingStart="10dp"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="20dp"
                        android:alpha="0.4"
                        android:rotation="180"
                        android:src="@drawable/ic_back"
                        app:tint="@color/hint_text" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_search"
                    android:orientation="horizontal"
                    android:paddingVertical="15dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserratregular"
                        android:paddingStart="10dp"
                        android:text="@string/about_us"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="20dp"
                        android:alpha="0.4"
                        android:rotation="180"
                        android:src="@drawable/ic_back"
                        app:tint="@color/hint_text" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/shape_gray_border"
                    android:backgroundTint="@color/pink_main"
                    android:orientation="horizontal"
                    android:paddingVertical="13dp">

                    <!--                    <ImageView-->
                    <!--                        android:layout_width="20dp"-->
                    <!--                        android:layout_height="20dp"-->
                    <!--                        android:src="@drawable/logout"-->
                    <!--                        android:layout_marginEnd="10dp"-->
                    <!--                        app:tint="@color/pink_main"/>-->


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/montserratregular"
                        android:gravity="center"
                        android:text="@string/log_out"
                        android:textColor="@color/white"
                        android:textSize="15sp" />


                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/montserratregular"
                android:gravity="center"
                android:text="@string/log_out"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </RelativeLayout>

    </RelativeLayout>

</layout>