<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lytTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="35dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:onClick="onClickBack"
            android:src="@drawable/back"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserratregular"
                android:gravity="center"
                android:text="@string/manage_audio_volume"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgDone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_baseline_check_24"
            app:tint="@color/white" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/controls"
        android:layout_below="@id/lytTop"
        android:gravity="center">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/player"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:resize_mode="fixed_width"
            app:use_controller="false" />

    </LinearLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/controls"
        android:layout_below="@id/lytTop"
        android:clickable="true"
        android:focusable="true" />

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/app_color"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/TextOnShadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserratregular"
            android:text="@string/volume_hint"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            style="@style/TextOnShadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratregular"
            android:text="@string/video_volume_label"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_baseline_volume_mute_24"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <com.google.android.material.slider.Slider
                android:id="@+id/video"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stepSize="1.0"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:thumbColor="@color/pink"
                app:trackColor="@color/white" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_baseline_volume_up_24"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="?attr/colorBackgroundFloating"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            style="@style/TextOnShadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratregular"
            android:text="@string/song_volume_label"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_baseline_volume_mute_24"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <com.google.android.material.slider.Slider
                android:id="@+id/song"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stepSize="1.0"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:thumbColor="@color/pink"
                app:trackColor="@color/white" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_baseline_volume_up_24"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/layout_no_internet" />
</RelativeLayout>
